--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+.settings
+.classpath
+.project
+.DS_Store
+.log
+*.pyc
+.DS_Store
+*.swp
