--- a/optima-web/pom.xml
+++ b/optima-web/pom.xml
@@ -18,8 +18,14 @@
 
 	<properties>
 		<spring.version>4.0.1.RELEASE</spring.version>
+		<java.version>1.6</java.version>
 	</properties>
 	<dependencies>
+	 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>1.1.9.RELEASE</version>
+        </dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -62,5 +68,15 @@
 	</dependencies>
 	<build>
 		<finalName>optima-web</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
