--- a/optima-web/pom.xml
+++ b/optima-web/pom.xml
@@ -18,7 +18,6 @@
 
 	<properties>
 		<spring.version>4.0.1.RELEASE</spring.version>
-		<java.version>1.6</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -55,18 +54,15 @@
 			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.optima.server</groupId>
+			<artifactId>optima-server</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>optima-web</finalName>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
